[package]
name = "samsunghvac2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
binrw = "0.11.2"
const_format = "0.2.31"
packed_struct = "0.10.1"
thiserror = "1.0.45"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
