[package]
name = "samsunghvac2mqtt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
async-broadcast = "0.5.1"
binrw = "0.11.2"
bytes = "1.4.0"
const_format = "0.2.31"
futures = "0.3.28"
packed_struct = "0.10.1"
rand = "0.8.5"
strum = "0.25.0"
strum_macros = "0.25.2"
thiserror = "1.0.45"
tokio = { version = "1.32.0", features = ["full"] }
tokio-serial = "5.4.4"
tokio-util = { version = "0.7.8", features = ["codec"] }
nng-futures = { git = "https://github.com/zegelin/nng-futures-rs" }
clap = { version = "4.4.2", features = ["derive"] }
url = "2.4.1"
colored = "2.0.4"
